--- a/Partie_2.html
+++ b/Partie_2.html
@@ -390,11 +390,11 @@ climatiques.</p>
 <div id="méthode" class="section level2">
 <h2>Méthode</h2>
 <p>Mise en œuvre d’un modele avec des ouragan stochastique:<br />
-##### <span class="math inline">\(dC = g_C(C,M,P,R,t)dt - c(F()+\sigma
+<span class="math inline">\(dC = g_C(C,M,P,R,t)dt - c(F()+\sigma
 \epsilon)idq\)</span><br />
-##### <span class="math inline">\(dM = g_M(C,M,P,R,t)dt -
+<span class="math inline">\(dM = g_M(C,M,P,R,t)dt -
 Mm_Hdqi\)</span><br />
-##### <span class="math inline">\(dP = g_P(C,M,P,R,t)dt\)</span><br />
+<span class="math inline">\(dP = g_P(C,M,P,R,t)dt\)</span><br />
 <span class="math inline">\(dR = g_R(C,M,P,R,t)dt - (R-1)(G() + \sigma
 \epsilon)idq\)</span><br />
 <span class="math inline">\(dY = 1 - M - C\)</span></p>
@@ -410,187 +410,210 @@ h_E(1-C)(R-1)\)</span></p>
 c2)}{K_{max}}\frac{\delta(M+Y)}{1 + v(M+Y)}\)</span></p>
 <p><span class="math inline">\(F() = 0.0512 + 0.0176*te\)</span> avec un
 maximun de F() = 0.5.</p>
+<div style="width: 85%; margin: 0 auto;">
+<div id="tableau-1-paramètre-utiliser-dans-le-modèle-de-référence-et-leurs-définitions." class="section level4">
+<h4>Tableau 1 : Paramètre utiliser dans le modèle de référence et leurs
+définitions.</h4>
 <table>
 <colgroup>
-<col width="33%" />
-<col width="33%" />
-<col width="33%" />
+<col width="16%" />
+<col width="24%" />
+<col width="60%" />
 </colgroup>
 <thead>
 <tr class="header">
-<th>Paramètre</th>
-<th>Valeur</th>
-<th>Définition</th>
+<th align="center">Paramètre</th>
+<th align="center">Valeur</th>
+<th align="left">Définition</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td>s</td>
-<td>0.49</td>
-<td>Taux de croissance du parrofish par année</td>
+<td align="center">s</td>
+<td align="center">0.49</td>
+<td align="left">Taux de croissance du parrofish par année</td>
 </tr>
 <tr class="even">
-<td>r</td>
-<td>1</td>
-<td>Taux pour lequel le corail remplace le gazon d’algue par année (Taux
-de coissance du corail)</td>
+<td align="center">r</td>
+<td align="center">1</td>
+<td align="left">Taux pour lequel le corail remplace le gazon d’algue
+par année (Taux de coissance du corail)</td>
 </tr>
 <tr class="odd">
-<td>a</td>
-<td>0.1</td>
-<td>Taux pour lequel les macroalgues remplace le corail par année</td>
-</tr>
-<tr class="even">
-<td>gamma</td>
-<td>1.6,0.8</td>
-<td>Taux pour lequel les macroalgues remplace le gazon d’algue par
+<td align="center">a</td>
+<td align="center">0.1</td>
+<td align="left">Taux pour lequel les macroalgues remplace le corail par
 année</td>
 </tr>
-<tr class="odd">
-<td>d</td>
-<td>0.44</td>
-<td>Taux de mortalité du corail par année</td>
-</tr>
 <tr class="even">
-<td>Alpha</td>
-<td>1</td>
-<td>Taux de broutage maximale par le parrofish</td>
+<td align="center">gamma</td>
+<td align="center">1.6,0.8</td>
+<td align="left">Taux pour lequel les macroalgues remplace le gazon
+d’algue par année</td>
 </tr>
 <tr class="odd">
-<td>f</td>
-<td>variable</td>
-<td>Effort de pêche en pourcentage</td>
+<td align="center">d</td>
+<td align="center">0.44</td>
+<td align="left">Taux de mortalité du corail par année</td>
 </tr>
 <tr class="even">
-<td>c1,c2</td>
-<td>3.65,-3.21</td>
-<td>Détermine la relation entre la complexité du corail et la capacité
-de support du parrofish</td>
+<td align="center">Alpha</td>
+<td align="center">1</td>
+<td align="left">Taux de broutage maximale par le parrofish</td>
 </tr>
 <tr class="odd">
-<td>delta,v</td>
-<td>4.557,0.9877</td>
-<td>Détermine la relation entre la nourriture disponible et la capacité
-de support du parrofish</td>
+<td align="center">f</td>
+<td align="center">variable</td>
+<td align="left">Effort de pêche en pourcentage</td>
 </tr>
 <tr class="even">
-<td>Beta</td>
-<td>1</td>
-<td>Capacité de support de l’environnement pour le parrofish théorique
-et relatif</td>
+<td align="center">c1,c2</td>
+<td align="center">3.65,-3.21</td>
+<td align="left">Détermine la relation entre la complexité du corail et
+la capacité de support du parrofish</td>
 </tr>
 <tr class="odd">
-<td>hG</td>
-<td>0.03</td>
-<td>Rétablissement de la complexité du corail par année</td>
+<td align="center">delta,v</td>
+<td align="center">4.557,0.9877</td>
+<td align="left">Détermine la relation entre la nourriture disponible et
+la capacité de support du parrofish</td>
 </tr>
 <tr class="even">
-<td>hE</td>
-<td>0.01</td>
-<td>Érosion de la complexité du corail par année</td>
+<td align="center">Beta</td>
+<td align="center">1</td>
+<td align="left">Capacité de support de l’environnement pour le
+parrofish théorique et relatif</td>
 </tr>
 <tr class="odd">
-<td>kmax</td>
-<td>17.745</td>
-<td>Limite supérieure d’abondance des parrofishs</td>
+<td align="center">hG</td>
+<td align="center">0.03</td>
+<td align="left">Rétablissement de la complexité du corail par
+année</td>
 </tr>
 <tr class="even">
-<td>F()</td>
-<td>0.0512 + 0.0176*te</td>
-<td>La proportion de la couverture corallienne maximun affectée par un
-ouragan respectivement</td>
+<td align="center">hE</td>
+<td align="center">0.01</td>
+<td align="left">Érosion de la complexité du corail par année</td>
 </tr>
 <tr class="odd">
-<td>G()</td>
-<td></td>
-<td>La proportion attendue de rugosité affectée au maximun par les
-impacts des ouragans respectivement</td>
+<td align="center">kmax</td>
+<td align="center">17.745</td>
+<td align="left">Limite supérieure d’abondance des parrofishs</td>
 </tr>
 <tr class="even">
-<td>mH</td>
-<td>0.8</td>
-<td>Taux de mortalité des macroalgues maximun suite a un ouragan</td>
+<td align="center">F()</td>
+<td align="center">0.0512 + 0.0176*te</td>
+<td align="left">La proportion de la couverture corallienne maximun
+affectée par un ouragan respectivement</td>
 </tr>
 <tr class="odd">
-<td>te</td>
-<td>varaible</td>
-<td>Temps écouler depuis le dernier ouragan en année</td>
+<td align="center">G()</td>
+<td align="center"></td>
+<td align="left">La proportion attendue de rugosité affectée au maximun
+par les impacts des ouragans respectivement</td>
 </tr>
 <tr class="even">
-<td>sigma</td>
-<td>0.05</td>
-<td>Écart maximale de la variabilité des impacts des oragans
-d’epsilon</td>
+<td align="center">mH</td>
+<td align="center">0.8</td>
+<td align="left">Taux de mortalité des macroalgues maximun suite a un
+ouragan</td>
 </tr>
 <tr class="odd">
-<td>epsilon</td>
-<td>entre 0 et 1</td>
-<td>Variable aléatoire suivant une distribution normale standard qui
-décrit la composante aléatoire des impacts des oragans sur le
-corail</td>
+<td align="center">te</td>
+<td align="center">varaible</td>
+<td align="left">Temps écouler depuis le dernier ouragan en année</td>
 </tr>
 <tr class="even">
-<td>i</td>
-<td>entre 0 et 1</td>
-<td>Pourcentage d’impacte des ouragants</td>
+<td align="center">sigma</td>
+<td align="center">0.05</td>
+<td align="left">Écart maximale de la variabilité des impacts des
+oragans d’epsilon</td>
+</tr>
+<tr class="odd">
+<td align="center">epsilon</td>
+<td align="center">entre 0 et 1</td>
+<td align="left">Variable aléatoire suivant une distribution normale
+standard qui décrit la composante aléatoire des impacts des oragans sur
+le corail</td>
+</tr>
+<tr class="even">
+<td align="center">i</td>
+<td align="center">entre 0 et 1</td>
+<td align="left">Pourcentage d’impacte des ouragants</td>
 </tr>
 </tbody>
 </table>
+</div>
+<div id="tableau-2-variable-utiliser-dans-le-modèle-de-référence-et-leur-définition-anisi-que-leurs-limites." class="section level4">
+<h4>Tableau 2 : Variable utiliser dans le modèle de référence et leur
+définition anisi que leurs limites.</h4>
 <table>
 <colgroup>
-<col width="33%" />
-<col width="33%" />
-<col width="33%" />
+<col width="16%" />
+<col width="24%" />
+<col width="60%" />
 </colgroup>
 <thead>
 <tr class="header">
-<th>Variable</th>
-<th>Valeur possible</th>
-<th>Définition</th>
+<th align="center">Variable</th>
+<th align="center">Valeur possible</th>
+<th align="left">Définition</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td>R</td>
-<td>entre 1 et 3</td>
-<td>Correspond à la rugosité des recif corralien. Où 1 équivaut à une
-structrue parfaitement lisse et où 3 est un rugosité très pronnoncer
-rarement atteint qui équivaut a un récif corailien offrant une tres
-bonne qualité d’habitat.</td>
-</tr>
-<tr class="even">
-<td>C</td>
-<td>entre 0 et 1</td>
-<td>Correspond à la proportion de couverture du paysage par le corail.
-Où 1 est une couverture complete et où 0 est l’extinction des
+<td align="center">C</td>
+<td align="center">entre 0 et 1</td>
+<td align="left">Correspond à la proportion de couverture du paysage par
+le corail. Où 1 est une couverture complete et où 0 est l’extinction des
 corail.</td>
 </tr>
+<tr class="even">
+<td align="center">M</td>
+<td align="center">entre 0 et 1</td>
+<td align="left">Correspond à la proportion de couverture du paysage par
+les macroalgues. Où 1 est une couverture compete et où 0 est
+l’extinction des macroalgue.</td>
+</tr>
 <tr class="odd">
-<td>M</td>
-<td>entre 0 et 1</td>
-<td>Correspond à la proportion de couverture du paysage par les
-macroalgues. Où 1 est une couverture compete et où 0 est l’extinction
-des macroalgue.</td>
+<td align="center">P</td>
+<td align="center">entre 0 et 1</td>
+<td align="left">Correspond à la population des parrofishs. Où 1 est
+lorsque la capacité de support maximale est atteind et où 0 est
+l’extinction des parrofishs</td>
 </tr>
 <tr class="even">
-<td>Y</td>
-<td>entre 0 et 1</td>
-<td>Le gazon d’algue correspond a tout ce qui n’est pas corail et
-macroalgue.</td>
+<td align="center">R</td>
+<td align="center">entre 1 et 3</td>
+<td align="left">Correspond à la rugosité des recif corralien. Où 1
+équivaut à une structrue parfaitement lisse et où 3 est un rugosité très
+pronnoncer rarement atteint qui équivaut a un récif corailien offrant
+une tres bonne qualité d’habitat.</td>
 </tr>
 <tr class="odd">
-<td>P</td>
-<td>entre 0 et 1</td>
-<td>Correspond à la population des parrofishs. Où 1 est lorsque la
-capacité de support maximale est atteind et où 0 est l’extinction des
-parrofishs</td>
+<td align="center">Y</td>
+<td align="center">entre 0 et 1</td>
+<td align="left">Le gazon d’algue correspond a tout ce qui n’est pas
+corail et macroalgue.</td>
 </tr>
 </tbody>
 </table>
+</div>
+</div>
 </div>
 <div id="résultat" class="section level2">
 <h2>Résultat</h2>
+<p>La relation entre la rugosité et le niveau d’impact des ouragants sur
+les récif corialien avec 3 niveau d’effort de peche :</p>
+<p>La relation entre l’effort de peche et le niveau d’impact des
+ouragant sur les récif corialien avec 3 niveau de rugosité de départ
+:</p>
+<p>La relation entre l’effort de peche et la rugosité avec un niveau
+d’impact des ouragant sur les récif corialien stochastique :</p>
 </div>
+</div>
+<div id="référence" class="section level1">
+<h1>Référence</h1>
 </div>
 
 
