--- a/version-propre.html
+++ b/version-propre.html
@@ -357,15 +357,11 @@ display: none;
 </div>
 
 
-<div id="article-de-référence-une-approche-basée-sur-un-modèle-pour-déterminer-les-effets-à-long-terme-de-multiples-facteurs-de-stress-en-interaction-sur-les-récifs-coralliens." class="section level4">
-<h4>Article de référence : Une approche basée sur un modèle pour
-déterminer les effets à long terme de multiples facteurs de stress en
-interaction sur les récifs coralliens.</h4>
-<div id="blackwood-j.c.-hastings-a.-and-mumby-p.j.-2011-a-model-based-approach-to-determine-the-long-term-effects-of-multiple-interacting-stressors-on-coral-reefs.-ecological-applications-21-2722-2733.-httpsdoi.org10.189010-2195.1" class="section level6">
-<h6>Blackwood, J.C., Hastings, A. and Mumby, P.J. (2011), A model-based
-approach to determine the long-term effects of multiple interacting
-stressors on coral reefs. Ecological Applications, 21: 2722-2733. <a href="https://doi.org/10.1890/10-2195.1" class="uri">https://doi.org/10.1890/10-2195.1</a></h6>
-</div>
+<div id="article-de-référence-blackwood-j.c.-hastings-a.-and-mumby-p.j.-2011-a-model-based-approach-to-determine-the-long-term-effects-of-multiple-interacting-stressors-on-coral-reefs.-ecological-applications-21-2722-2733.-httpsdoi.org10.189010-2195.1" class="section level4">
+<h4>Article de référence : Blackwood, J.C., Hastings, A. and Mumby, P.J.
+(2011), A model-based approach to determine the long-term effects of
+multiple interacting stressors on coral reefs. Ecological Applications,
+21: 2722-2733. <a href="https://doi.org/10.1890/10-2195.1" class="uri">https://doi.org/10.1890/10-2195.1</a></h4>
 <div id="les-analyse-du-modele-ont-été-fait-par-antoine-castonguay-et-félix-richard" class="section level6">
 <h6>Les analyse du modele ont été fait par : Antoine Castonguay et Félix
 Richard</h6>
@@ -375,15 +371,16 @@ Richard</h6>
 <h2>Partie 1 :</h2>
 <div id="question-biologique" class="section level3">
 <h3>Question biologique :</h3>
-<p>Est ce que la résilience des récifs coraliens est suffisante pour
-lutter contre les facteur de stress tels que la surpêche et les
-ouragans?</p>
+<p>Comment la résilience des récifs coraliens varie-t-elle en fonction
+de l’effort de pêche et de l’effet des ouragans?</p>
 </div>
 <div id="hypothèse" class="section level3">
 <h3>Hypothèse :</h3>
-<p>Elle est suffisante jusqu’à une certaine limite qui dépend beaucoup
-de la complexité du corail, le l’effort de pêche et de l’impact
-aléatoire des ouragans.</p>
+<ol style="list-style-type: decimal">
+<li>La résilience diminue quand l’effort de pêche augmente.</li>
+<li>La résilience dimniue quand les ouragan sont plus fréquence.</li>
+<li>La résilience dimniue quand les ouragan sont plus puissants.</li>
+</ol>
 </div>
 <div id="données" class="section level3">
 <h3>Données :</h3>
@@ -408,7 +405,8 @@ définitions.</h4>
 <tr class="odd">
 <td align="center">s</td>
 <td align="center">0.49</td>
-<td align="left">Taux de croissance des parrofishs par année</td>
+<td align="left">Taux de croissance des poisson perroquets par
+année</td>
 </tr>
 <tr class="even">
 <td align="center">r</td>
@@ -436,7 +434,7 @@ d’algue par année</td>
 <tr class="even">
 <td align="center">Alpha</td>
 <td align="center">1</td>
-<td align="left">Taux de broutage maximale par le parrofish</td>
+<td align="left">Taux de broutage maximale par le poisson perroquet</td>
 </tr>
 <tr class="odd">
 <td align="center">f</td>
@@ -447,19 +445,19 @@ d’algue par année</td>
 <td align="center">c1,c2</td>
 <td align="center">3.65,-3.21</td>
 <td align="left">Détermine la relation entre la complexité du corail et
-la capacité de support du parrofish</td>
+la capacité de support du poisson perroquet</td>
 </tr>
 <tr class="odd">
 <td align="center">delta,v</td>
 <td align="center">4.557,0.9877</td>
 <td align="left">Détermine la relation entre la nourriture disponible et
-la capacité de support du parrofish</td>
+la capacité de support du poisson perroquet</td>
 </tr>
 <tr class="even">
 <td align="center">Beta</td>
 <td align="center">1</td>
-<td align="left">Capacité de support de l’environnement pour le
-parrofish relatif</td>
+<td align="left">Capacité de support de l’environnement pour le poisson
+perroquet relatif</td>
 </tr>
 <tr class="odd">
 <td align="center">hG</td>
@@ -475,7 +473,8 @@ année</td>
 <tr class="odd">
 <td align="center">kmax</td>
 <td align="center">17.745</td>
-<td align="left">Limite supérieure d’abondance des parrofishs</td>
+<td align="left">Limite supérieure d’abondance des poisson
+perroquets</td>
 </tr>
 <tr class="even">
 <td align="center">F()</td>
@@ -550,9 +549,9 @@ l’extinction des macroalgue.</td>
 <tr class="odd">
 <td align="center">P</td>
 <td align="center">entre 0 et 1</td>
-<td align="left">Correspond à la population des parrofishs. Où 1 est
-lorsque la capacité de support maximale est atteind et où 0 est
-l’extinction des parrofishs</td>
+<td align="left">Correspond à la population des poisson perroquets. Où 1
+est lorsque la capacité de support maximale est atteind et où 0 est
+l’extinction des poisson perroquets</td>
 </tr>
 <tr class="even">
 <td align="center">R</td>
@@ -575,7 +574,7 @@ corail et macroalgue.</td>
 </div>
 <div id="méthode" class="section level3">
 <h3>Méthode :</h3>
-Modèle :<br />
+Modèle pour une rugosité fixe:<br />
 
 <div style="margin: 0 auto;">
 <p><span class="math inline">\(\frac{dC}{dt} = \small{rTC - dC -
@@ -584,17 +583,26 @@ aMC}\)</span><br />
 \frac{P}{\beta}M}{M + Y} - \small{\gamma MY}\)</span><br />
 <span class="math inline">\(\frac{dP}{dt} = \small{sP(1 -}
 \frac{P}{\beta K(M+T,R)} \small{ - sfP}\)</span><br />
+<span class="math inline">\(\frac{dY}{dt} = \small{1 - M -
+C}\)</span></p>
+<p>La capacité de support de l’environnement pour le poisson perroquets
+prendre en compte l’abondance des algues, qui constituent leur
+nourriture, ainsi que la qualité de l’habitat K(M + T, R).<br />
+<span class="math inline">\(\small{K(M+T,R) = }\frac{(c1R +
+c2)}{K_{max}}\frac{\delta(M+Y)}{1 + v(M+Y)}\)</span></p>
+<p>Modèle avec un rugosité variable:<br />
+<span class="math inline">\(\frac{dC}{dt} = \small{rTC - dC -
+aMC}\)</span><br />
+<span class="math inline">\(\frac{dM}{dt} = \small{aMC} - \frac{\alpha
+\frac{P}{\beta}M}{M + Y} - \small{\gamma MY}\)</span><br />
+<span class="math inline">\(\frac{dP}{dt} = \small{sP(1 -}
+\frac{P}{\beta K(M+T,R)} \small{ - sfP}\)</span><br />
 <span class="math inline">\(\frac{dR}{dt} = \small{h_GC(3-R) -
 h_E(1-C)(R-1)}\)</span><br />
 <span class="math inline">\(\frac{dY}{dt} = \small{1 - M -
-C}\)</span><br />
-La capacité de support de l’environnement pour le parrofishs prendre en
-compte l’abondance des algues, qui constituent leur nourriture, ainsi
-que la qualité de l’habitat K(M + T, R).<br />
-<span class="math inline">\(\small{K(M+T,R) = }\frac{(c1R +
-c2)}{K_{max}}\frac{\delta(M+Y)}{1 + v(M+Y)}\)</span></p>
-<p>Modèle Nondimentionner par rapport taux de croissance des parrofish
-par année:<br />
+C}\)</span></p>
+<p>Modèle Non-dimensionalisé par rapport taux de croissance des poisson
+perroquet par année:<br />
 <span class="math inline">\(\frac{dC}{dts} = (\small{rTC - dC -
 aMC})\frac{1}{s}\)</span><br />
 <span class="math inline">\(\frac{dM}{dts} = (\small{aMC} - \frac{\alpha
@@ -615,7 +623,7 @@ Mm_Hdq}\)</span><br />
 \sigma \epsilon)dq}\)</span><br />
 <span class="math inline">\(\small{dY = 1 - M - C}\)</span></p>
 <p><span class="math inline">\(\small{F() = 0.0512 + 0.0176*te}\)</span>
-avec un maximun de F() = 0.5.</p>
+avec un maximun de F() = 0.5. G() est soit 0.5 pour</p>
 <p>où <span class="math inline">\(\small{g_C(C,M,P,R,t),g_M(C,M,P,R,t),g_P(C,M,P,R,t),g_R(C,M,P,R,t)}\)</span>
 sont des fonctions qui represente le modèle.<br />
 Et où q est un processus de saut de Poisson avec un taux de saut λ tel
@@ -633,9 +641,8 @@ l’élévation du niveau de la mer est significatif sur l’echelle du temps
 ouragans, les impacts indirects de la pêche ou la compétition de
 l’espace avec les macroalgues ne sont pas pris en compte.<br />
 </li>
-<li>L’effort de pêche ont une influence proportionnelement de la
-dynamique de population parrofishs et est constant pour toute les années
-de la simulation.<br />
+<li>L’effort de pêche est constant pour toute les années de la
+simulation.<br />
 </li>
 <li>Après un oragan, le gazon d’algues colonise immédiatement tout
 l’espace libre.<br />
@@ -643,17 +650,25 @@ l’espace libre.<br />
 <li>Le gazon d’algue correspond a tout la surface qui n’est pas des
 coraux ou des macroalgue.</li>
 <li>Les ouragans n’ont pas d’effets directs significatifs sur
-l’abondance ou la croissance des parrofishs.</li>
+l’abondance ou la croissance des poisson perroquets.<br />
+</li>
 <li>Les macroalgues on le même niveau de dommage peu importe le niveau
-d’impact des ouragan.</li>
-<li>Les ouragans on trois niveau d’impacts éléver, moyen et faible et
-trois fréquences moyennes soit 1 par 9 ans, 1 par 15 ans et 1 par 30
-ans.</li>
+d’impact des ouragan.<br />
+</li>
+<li>Les ouragans ont un impact et une féquense constante sur toute la
+duré de la simulation.<br />
+</li>
 <li>La distribution des coraux, des algues macroscopiques et des
 poissons perroquets dans l’espace n’a pas d’impact sur leur
 dynamique.</li>
-<li>Un ouragan affecte affecte l’ensemble de l’écosysteme de fasson
-égale.</li>
+<li>Un ouragan affecte l’ensemble de l’écosysteme de facon égale.</li>
+<li>Les ouragan suit un processus de saut de Poisson avec un taux de
+saut λ tel que dq = 0 avec une probabilité de 1 - λdt et dq = 1 avec une
+probabilité de λdt.</li>
+<li>Tous les parametres du modele sont représentatif de la situation
+réel de l’écosysteme.</li>
+<li>Il est impossible pour le corail et les macroalgue de s’éteindre
+totalement.</li>
 </ol>
 </div>
 <div id="calcul" class="section level3">
@@ -662,7 +677,7 @@ dynamique.</li>
 library(deSolve)
 library(viridis)</code></pre>
 <pre class="r"><code># Code pour l&#39;implémentation du modele dans une fonction
-# Fonction pour le modele deterministe du l&#39;interaction entre le corail, les marcoalgue et les parrofishs avec une rugosité fixe.
+# Fonction pour le modele deterministe du l&#39;interaction entre le corail, les marcoalgue et les poisson perroquets avec une rugosité fixe.
 interaction_coral &lt;- function(t, vars, parms){
   with(as.list(c(parms, vars)), {
     
@@ -694,7 +709,7 @@ dessinSol &lt;- function(ic=c(M=0.001,C=0.56,P=0.75),
                                v=0.9877,
                                hG=0.03,
                                hE=0.01,
-                               gamma = 1.6,
+                               gamma = 0.8,
                                rug=2)) {
   soln &lt;- ode(ic, times, func, parms)
   
@@ -771,7 +786,7 @@ fréquences moyennes sont 1 fois par 9 ans (1/9), une fois par 15 ans
   to &lt;- 0
   
   #on pose les valeurs de départ et les paramètres
-  C &lt;- 0.56*0.8
+  C &lt;- 0.56
   M &lt;- 0.01
   Y &lt;- 0.43
   R &lt;- R0
@@ -779,7 +794,7 @@ fréquences moyennes sont 1 fois par 9 ans (1/9), une fois par 15 ans
   a&lt;-0.1
   g&lt;-0.8
   d&lt;-0.44
-  r&lt;-0.8
+  r&lt;-1
   f&lt;-f
   s&lt;-0.49
   ca&lt;--(3.21)
@@ -932,7 +947,7 @@ graph.imageC &lt;- function(impact,freq,it=10,pas=0.1){
              main=c(&quot;moyenne de C finale&quot;,paste(c(&quot;fréq:1/&quot;,1/l,&quot;, impact:&quot;,imp),collapse = &quot;&quot;)))
   image.plot(x = x_values, y = y_values, t(matsd), col = viridis(20),
              xlab = &quot;effort de pêche&quot;, ylab = &quot;Rugosité initiale&quot;,
-             main=c(&quot;moyenne de C finale&quot;,paste(c(&quot;fréq:1/&quot;,1/l,&quot;, impact:&quot;,imp),collapse = &quot;&quot;)))
+             main=c(&quot;Écart-type de C finale&quot;,paste(c(&quot;fréq:1/&quot;,1/l,&quot;, impact:&quot;,imp),collapse = &quot;&quot;)))
 }</code></pre>
 <p>Idem pour la moyenne ainsi que l’écart-type de la rugosité. La
 fonction utilisée pour cela est la suivante (ce sont les mêmes étapes
@@ -972,7 +987,7 @@ pas commentées) et les 2 mêmes simulations sont montrées à la fin:</p>
                                                   collapse = &quot;&quot;)))
     image.plot(x = x_values, y = y_values, t(matsd), col = viridis(20),
                xlab = &quot;effort de pêche&quot;, ylab = &quot;Rugosité initiale&quot;,
-               main=c(&quot;moyenne de R finale&quot;,paste(c(&quot;fréq:1/&quot;,1/l,&quot;, impact:&quot;,imp),
+               main=c(&quot;Écart-type de R finale&quot;,paste(c(&quot;fréq:1/&quot;,1/l,&quot;, impact:&quot;,imp),
                                                   collapse = &quot;&quot;)))
   }
   #si on veut afficher la moyenne
@@ -1061,7 +1076,25 @@ lines(rep(1:length(categories), each = 1), rugfin[,3],
 legend(&quot;topright&quot;, legend = c(&quot;/9 ans&quot;, &quot;/15 ans&quot;,&quot;/30 ans&quot;),
        col = c(&quot;black&quot;,&quot;black&quot;,&quot;black&quot;), pch = c(2,4,6), lty = c(1, 1),
        lwd = 1.5, bg = &quot;white&quot;,cex = 0.65)</code></pre>
-<p>Interprétation :</p>
+<p>###Interprétation :</p>
+<p>Après analyse des résultats, on remarque facilement que la pêche est
+le facteur qui a l’effet le plus clair sur le corail, réduisant
+grandement la possibilité que le corail se rétablisse. Il semble que le
+couvert de corail soit légèrement moins résilient à la pêche quand les
+ouragans sont moins fréquents et de faible intensité, mais cette
+tendance s’inverse quand les impacts sont modérés ou importants. La
+rugosité, elle, arrive aussi, semble supporter de plus grands niveaux de
+pêche sans s’effondrer quand les ouragans sont plus fréquents quand
+l’impact est faibles, bien que cette tendance semble s’estomper quand
+l’impact augmente. Toutefois quand les ouragans sont moins fréquents et
+violents et que l’effort de pêche est assez bas, la rugosité et le
+couvert de corail se rétablit à des niveaux plus hauts. Ces résultats
+pointent vers l’importance de considérer l’application de mesures de
+restriction à la pêche dans les zones ou les ouragans sont moins
+fréquents et/ou plus violents, car le corail est plus fragile dans ces
+endroits et car le gain d’une petite réduction de l’effort de pêche peut
+permettre une amélioration importante de l’état du corail, donc une
+meilleure efficacité de conservation.</p>
 </div>
 </div>
 
