--- a/Partie_2.html
+++ b/Partie_2.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2024-04-09" />
 
-<title>Partie_2</title>
+<title>Projet BIO401-Partie_2</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -372,7 +372,7 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Partie_2</h1>
+<h1 class="title toc-ignore">Projet BIO401-Partie_2</h1>
 <h4 class="author">AmigoTeam</h4>
 <h4 class="date">2024-04-09</h4>
 
@@ -742,12 +742,13 @@ i+0.75)\)</span></li>
 <li><span class="math inline">\(F(t_e)=0.0512+0.0176\times
 t_e\times(1+t/200)\)</span> où si <span class="math inline">\(F(t_e)&gt;0.5\)</span> alors <span class="math inline">\(F(t_e)=0.5\)</span></li>
 </ul>
-<p>Tout comme dans le modèle de Blackwood et al. (2011), l’évènement
-d’un ouragan est déterminé par un tirage aléatoire dans une distribution
-de poisson à moyenne <span class="math inline">\(\lambda\)</span>, ce
-tirage offre donc une probabilité <span class="math inline">\(\lambda
-\times dt\)</span> qu’un ouragan arrive (si le résultat du tirage est
-&gt;0) pour chaque pas de temps.</p>
+<p>Tout comme dans le modèle de <span class="citation">Blackwood,
+Hastings, and Mumby (2011)</span>, l’évènement d’un ouragan est
+déterminé par un tirage aléatoire dans une distribution de poisson à
+moyenne <span class="math inline">\(\lambda\)</span>, ce tirage offre
+donc une probabilité <span class="math inline">\(\lambda \times
+dt\)</span> qu’un ouragan arrive (si le résultat du tirage est &gt;0)
+pour chaque pas de temps.</p>
 <p>Les équations différentielles qui déterminent la dynamique des
 composantes du modèle (C, M, Y, P et R) restent sinon inchangées dans
 tous les cas où un ouragan n’a pas lieu. Le modèle est sous forme de
@@ -876,24 +877,23 @@ différents efforts de pêche, nous effectuons 10 simulations de 100 ans
 par combinaison de R et i, et ce pour les 3 différentes valeurs d’effort
 de pêche correspondant à un effort minime, modéré et élevé avec les
 valeurs suivantes: 0.1, 0.4 et 0.7. Ces valeurs sont tirées de nos
-propres observations dans les figures présentées par Blackwood et
-al. (2011). Au bout de 100 ans, avec la paramétrisation utilisée, quand
-l’effort de pêche était aux alentours de 0.1, le corail se rétablissait
-très souvent. Quand l’effort de pêche était plus grand que 0.6, le
-corail finissait très souvent par s’effondrer au profit des macroalgues.
-La situation intermédiaire avec un effort de pêche à mi-chemin
-produisait différentes situations dépendamment de plusieurs facteurs.
-Nous avons donc considéré plus ou moins arbitrairement que 0.1, 0.4 et
-0.7 représentaient respectivement un effort de pêche faible, moyen et
-fort. Les images générées ensuite représentent ainsi la moyenne et
-l’écart-type du résultat des 10 simulations. Nous faisons cela 2 fois,
-une fois avec le résultat en terme de couverture par le corail et une
-autre avec le résultat pour la rugosité après 100 ans. Pour toutes ces
-simulations la fréquence moyenne estimée des ouragans est fixée à 1/15,
-correspondant à une fréquence intermédiaire d’un ouragan au 15 ans, et
-le pas de temps est ajusté à 0.1 pour conférer une bonne résolution aux
-résultats tout en optimisant le temps nécessaire pour calculer chaque
-simulation.</p>
+propres observations dans les figures présentées par <span class="citation">Blackwood, Hastings, and Mumby (2011)</span>. Au bout
+de 100 ans, avec la paramétrisation utilisée, quand l’effort de pêche
+était aux alentours de 0.1, le corail se rétablissait très souvent.
+Quand l’effort de pêche était plus grand que 0.6, le corail finissait
+très souvent par s’effondrer au profit des macroalgues. La situation
+intermédiaire avec un effort de pêche à mi-chemin produisait différentes
+situations dépendamment de plusieurs facteurs. Nous avons donc considéré
+plus ou moins arbitrairement que 0.1, 0.4 et 0.7 représentaient
+respectivement un effort de pêche faible, moyen et fort. Les images
+générées ensuite représentent ainsi la moyenne et l’écart-type du
+résultat des 10 simulations. Nous faisons cela 2 fois, une fois avec le
+résultat en terme de couverture par le corail et une autre avec le
+résultat pour la rugosité après 100 ans. Pour toutes ces simulations la
+fréquence moyenne estimée des ouragans est fixée à 1/15, correspondant à
+une fréquence intermédiaire d’un ouragan au 15 ans, et le pas de temps
+est ajusté à 0.1 pour conférer une bonne résolution aux résultats tout
+en optimisant le temps nécessaire pour calculer chaque simulation.</p>
 <pre class="r"><code>library(fields)
 #graphique de C en fonction de I et R
 graph.imageCIR &lt;- function(fishing,freq,it=10,pas=0.1){
