--- a/version-propre.html
+++ b/version-propre.html
@@ -1087,7 +1087,9 @@ lines(rep(1:length(categories), each = 1), rugfin[,3],
 legend(&quot;topright&quot;, legend = c(&quot;/9 ans&quot;, &quot;/15 ans&quot;,&quot;/30 ans&quot;),
        col = c(&quot;black&quot;,&quot;black&quot;,&quot;black&quot;), pch = c(2,4,6), lty = c(1, 1),
        lwd = 1.5, bg = &quot;white&quot;,cex = 0.65)</code></pre>
-<p>###Interprétation :</p>
+</div>
+<div id="interprétation" class="section level3">
+<h3>Interprétation :</h3>
 <p>Après analyse des résultats, on remarque facilement que la pêche est
 le facteur qui a l’effet le plus clair sur le corail, réduisant
 grandement la possibilité que le corail se rétablisse. Il semble que le
